@@ -38,6 +38,10 @@
 <p>2018-02-18  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>coders/rla.c (ReadRLAImage): Detect when RLE decoding is
+producing too many samples and report as an error.  Fixes oss-fuzz
+issue 6312 &quot;graphicsmagick/coder_RLA_fuzzer: Timeout in
+graphicsmagick_coder_RLA_fuzzer&quot;. (Credit to OSS-Fuzz)</li>
 <li>coders/fits.c (ReadFITSImage): Validate that file size is
 sufficient for claimed image properties.  Fixes oss-fuzz issue
 6429 &quot;graphicsmagick/coder_FITS_fuzzer: Timeout in
